jenkins/aplicacao-frontend/hmg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplicacao-frontend-service
spec:
  selector:
    app: aplicacao-frontend
  type: ClusterIP
  ports:
  - name: aplicacao-frontend-service
    port: 80
    targetPort: 8080
    protocol: TCP
